--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6a938ae
+	base = f22b66d
 	trimbase = 
 	parent = rpm/indigo/ecl_build
-	previous = 
+	previous = 6a938ae
