--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 78d885e
+	base = 9c5f404
 	trimbase = 
 	parent = rpm/indigo/ecl_tools
-	previous = 
+	previous = 78d885e
