--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c3727e3
+	base = ff60b75
 	trimbase = 
 	parent = rpm/indigo/ecl_license
-	previous = 
+	previous = c3727e3
